--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+mint = "0.5.9"
+
+[dependencies.bno055]
+version = "0.3.3"
+features =  ["serde"]
+
+[dependencies.linux-embedded-hal]
+version = "0.3.2"
